Basic event data shape, resolvers

--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "yeny-server",
-  "version": "0.1.0",
-  "dependencies": {
-    "type-graphql": "^0.17.5",
-    "typeorm": "^0.2.21",
-    "typescript": "~3.7.2",
-    "apollo-server": "^2.9.13",
-    "typedi": "latest",
-    "typeorm-typedi-extensions": "latest"
-  }
+    "name": "yeny-server",
+    "version": "0.1.0",
+    "scripts": {
+        "start": "ts-node -T src/index.ts"
+    },
+    "dependencies": {
+        "@types/node-fetch": "^2.5.4",
+        "apollo-server": "^2.9.13",
+        "date-fns": "^2.8.1",
+        "node-fetch": "^2.6.0",
+        "pg": "^7.14.0",
+        "ts-node": "^8.5.4",
+        "type-graphql": "^0.17.5",
+        "typedi": "^0.8.0",
+        "typeorm": "^0.2.21",
+        "typeorm-typedi-extensions": "^0.2.3",
+        "typescript": "^3.7.3"
+    },
+    "engines": {
+        "node": "12.x"
+    }
 }
