--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "yeny",
-  "version": "0.1.0",
-  "dependencies": {},
-  "devDependencies": {
-    "prettier": "^1.19.1"
-  }
+    "name": "yeny",
+    "version": "0.1.0",
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
+    },
+    "devDependencies": {
+        "husky": "^3.1.0",
+        "prettier": "^1.19.1",
+        "pretty-quick": "^2.0.1"
+    }
 }
