--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,25 +1,27 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true,
-    "forceConsistentCasingInFileNames": true,
-    "strictPropertyInitialization": false,
-    "lib": ["es2017", "esnext.asynciterable"],
-    "types": ["node"],
-    "baseUrl": ".",
-    "paths": {
-      "*": ["types/*"]
+    "compilerOptions": {
+        "target": "es5",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "sourceMap": true,
+        "declaration": true,
+        "declarationMap": true,
+        "strict": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUnusedParameters": true,
+        "noUnusedLocals": true,
+        "forceConsistentCasingInFileNames": true,
+        "strictPropertyInitialization": false,
+        "resolveJsonModule": true,
+        "lib": ["es2017", "esnext.asynciterable"],
+        "types": ["node"],
+        "baseUrl": ".",
+        "paths": {
+            "*": ["types/*"]
+        }
     }
-  }
 }
