--- a/server/package.json
+++ b/server/package.json
@@ -2,22 +2,26 @@
     "name": "yeny-server",
     "version": "0.1.0",
     "scripts": {
-        "start": "ts-node -T src/index.ts"
+        "start": "ts-node-dev --respawn -T src/index.ts"
     },
     "dependencies": {
         "@types/node-fetch": "^2.5.4",
-        "apollo-server": "^2.9.13",
+        "apollo-server": "^2.9.14",
+        "class-validator": "^0.11.0",
         "date-fns": "^2.8.1",
         "node-fetch": "^2.6.0",
-        "pg": "^7.14.0",
+        "pg": "^7.15.1",
         "ts-node": "^8.5.4",
         "type-graphql": "^0.17.5",
         "typedi": "^0.8.0",
         "typeorm": "^0.2.21",
         "typeorm-typedi-extensions": "^0.2.3",
-        "typescript": "^3.7.3"
+        "typescript": "^3.7.4"
     },
     "engines": {
         "node": "12.x"
+    },
+    "devDependencies": {
+        "ts-node-dev": "1.0.0-pre.44"
     }
 }
