--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
     "name": "yeny-server",
     "version": "0.1.0",
     "scripts": {
-        "start": "ts-node-dev --respawn -T src/index.ts"
+        "start-dev": "ts-node-dev --respawn -T src/index.ts"
     },
     "dependencies": {
         "@types/node-fetch": "^2.5.4",
