--- a/client/package.json
+++ b/client/package.json
@@ -2,24 +2,25 @@
     "name": "yeny-client",
     "version": "0.1.0",
     "dependencies": {
+        "@apollo/react-hooks": "^3.1.3",
         "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "@types/jest": "^24.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
-        "apollo-client": "^2.6.4",
+        "@testing-library/react": "^9.4.0",
+        "@testing-library/user-event": "^8.0.2",
+        "apollo-boost": "^0.4.7",
+        "apollo-client": "^2.6.8",
+        "graphql": "^14.5.8",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.0",
-        "typescript": "~3.7.2"
+        "typescript": "~3.7.4"
     },
     "scripts": {
         "start-dev": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "test": "react-scripts  test",
+        "eject": "react-scripts eject",
+        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --includes=**/*.tsx --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/generated"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -35,5 +36,13 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/jest": "^24.0.24",
+        "@types/node": "^12.12.21",
+        "@types/react": "^16.9.17",
+        "@types/react-dom": "^16.9.4",
+        "@types/react-router-dom": "^5.1.3",
+        "apollo": "^2.21.2"
     }
 }
