--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,13 @@
     "dependencies": {
         "@types/node-fetch": "^2.5.4",
         "apollo-server": "^2.9.14",
+        "bcryptjs": "^2.4.3",
         "class-validator": "^0.11.0",
         "date-fns": "^2.8.1",
         "node-fetch": "^2.6.0",
         "pg": "^7.15.1",
         "ts-node": "^8.5.4",
-        "type-graphql": "^0.17.5",
+        "type-graphql": "^0.17.6",
         "typedi": "^0.8.0",
         "typeorm": "^0.2.21",
         "typeorm-typedi-extensions": "^0.2.3",
