--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
         "build": "react-scripts build",
         "test": "react-scripts  test",
         "eject": "react-scripts eject",
-        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --includes=**/*.tsx --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/generated"
+        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/generated"
     },
     "eslintConfig": {
         "extends": "react-app"
