--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
     "version": "0.1.0",
     "dependencies": {
         "@apollo/react-hooks": "^3.1.3",
+        "@material-ui/core": "^4.8.2",
+        "@material-ui/icons": "^4.5.1",
+        "@material-ui/lab": "^4.0.0-alpha.38",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.0",
         "@testing-library/user-event": "^8.0.2",
         "apollo-boost": "^0.4.7",
         "apollo-client": "^2.6.8",
+        "date-fns": "^2.8.1",
         "graphql": "^14.5.8",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
@@ -20,7 +24,8 @@
         "build": "react-scripts build",
         "test": "react-scripts  test",
         "eject": "react-scripts eject",
-        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/generated"
+        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/generated",
+        "svgo": "npx svgo -f src/assets/"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -38,11 +43,12 @@
         ]
     },
     "devDependencies": {
-        "@types/jest": "^24.0.24",
-        "@types/node": "^12.12.21",
+        "@types/jest": "^24.0.25",
+        "@types/node": "^13.1.2",
         "@types/react": "^16.9.17",
         "@types/react-dom": "^16.9.4",
         "@types/react-router-dom": "^5.1.3",
-        "apollo": "^2.21.2"
+        "apollo": "^2.21.2",
+        "svgo": "^1.3.2"
     }
 }
