--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,15 @@
     },
     "dependencies": {
         "@types/node-fetch": "^2.5.4",
-        "apollo-server": "^2.9.14",
+        "@types/speakingurl": "^13.0.2",
+        "apollo-server": "^2.9.15",
         "bcryptjs": "^2.4.3",
         "class-validator": "^0.11.0",
         "date-fns": "^2.8.1",
+        "faker": "^4.1.0",
         "node-fetch": "^2.6.0",
-        "pg": "^7.15.1",
+        "pg": "^7.17.0",
+        "speakingurl": "^14.0.1",
         "ts-node": "^8.5.4",
         "type-graphql": "^0.17.6",
         "typedi": "^0.8.0",
@@ -24,6 +27,7 @@
         "node": "12.x"
     },
     "devDependencies": {
+        "@types/faker": "^4.1.8",
         "@types/uuid": "^3.4.6",
         "ts-node-dev": "1.0.0-pre.44"
     }
