--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,24 @@
     "version": "0.1.0",
     "dependencies": {
         "@apollo/react-hooks": "^3.1.3",
+        "@date-io/date-fns": "^1.3.13",
         "@material-ui/core": "^4.8.2",
         "@material-ui/icons": "^4.5.1",
         "@material-ui/lab": "^4.0.0-alpha.38",
+        "@material-ui/pickers": "^3.2.8",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.0",
         "@testing-library/user-event": "^8.0.2",
         "apollo-boost": "^0.4.7",
         "apollo-client": "^2.6.8",
+        "axios": "^0.19.0",
         "date-fns": "^2.8.1",
         "graphql": "^14.5.8",
+        "leaflet": "^1.6.0",
+        "lodash-es": "^4.17.15",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-leaflet": "latest",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.0",
         "typescript": "~3.7.4"
@@ -44,9 +50,12 @@
     },
     "devDependencies": {
         "@types/jest": "^24.0.25",
+        "@types/leaflet": "^1.5.7",
+        "@types/lodash-es": "^4.17.3",
         "@types/node": "^13.1.2",
         "@types/react": "^16.9.17",
         "@types/react-dom": "^16.9.4",
+        "@types/react-leaflet": "^2.5.0",
         "@types/react-router-dom": "^5.1.3",
         "apollo": "^2.21.2",
         "svgo": "^1.3.2"
