--- a/client/package.json
+++ b/client/package.json
@@ -10,27 +10,29 @@
         "@material-ui/pickers": "^3.2.8",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.0",
-        "@testing-library/user-event": "^8.0.2",
-        "apollo-boost": "^0.4.7",
+        "@testing-library/user-event": "^8.0.3",
         "apollo-client": "^2.6.8",
         "axios": "^0.19.0",
         "date-fns": "^2.8.1",
+        "formik": "^2.1.1",
         "graphql": "^14.5.8",
         "leaflet": "^1.6.0",
         "lodash-es": "^4.17.15",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-leaflet": "latest",
+        "react-leaflet": "^2.6.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.0",
-        "typescript": "~3.7.4"
+        "typescript": "~3.7.4",
+        "yup": "^0.28.0",
+        "apollo-cache-inmemory": "latest"
     },
     "scripts": {
         "start-dev": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts  test",
         "eject": "react-scripts eject",
-        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/generated",
+        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/_generated",
         "svgo": "npx svgo -f src/assets/"
     },
     "eslintConfig": {
@@ -51,13 +53,15 @@
     "devDependencies": {
         "@types/jest": "^24.0.25",
         "@types/leaflet": "^1.5.7",
+        "@types/faker": "^4.1.8",
         "@types/lodash-es": "^4.17.3",
-        "@types/node": "^13.1.2",
+        "@types/node": "^13.1.4",
         "@types/react": "^16.9.17",
         "@types/react-dom": "^16.9.4",
         "@types/react-leaflet": "^2.5.0",
         "@types/react-router-dom": "^5.1.3",
         "apollo": "^2.21.2",
+        "faker": "^4.1.0",
         "svgo": "^1.3.2"
     }
 }
