--- a/client/package.json
+++ b/client/package.json
@@ -2,18 +2,19 @@
     "name": "yeny-client",
     "version": "0.1.0",
     "dependencies": {
+        "apollo-cache-inmemory": "^1.6.5",
         "@apollo/react-hooks": "^3.1.3",
         "@date-io/date-fns": "^1.3.13",
-        "@material-ui/core": "^4.8.2",
+        "@material-ui/core": "^4.8.3",
         "@material-ui/icons": "^4.5.1",
-        "@material-ui/lab": "^4.0.0-alpha.38",
+        "@material-ui/lab": "^4.0.0-alpha.39",
         "@material-ui/pickers": "^3.2.8",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.0",
         "@testing-library/user-event": "^8.0.3",
         "apollo-client": "^2.6.8",
-        "axios": "^0.19.0",
-        "date-fns": "^2.8.1",
+        "axios": "^0.19.1",
+        "date-fns": "^2.9.0",
         "formik": "^2.1.1",
         "graphql": "^14.5.8",
         "leaflet": "^1.6.0",
@@ -22,10 +23,9 @@
         "react-dom": "^16.12.0",
         "react-leaflet": "^2.6.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.3.0",
-        "typescript": "~3.7.4",
-        "yup": "^0.28.0",
-        "apollo-cache-inmemory": "latest"
+        "react-scripts": "^3.3.0",
+        "typescript": "^3.7.4",
+        "yup": "^0.28.0"
     },
     "scripts": {
         "start-dev": "react-scripts start",
