--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
         "build": "react-scripts build",
         "test": "react-scripts  test",
         "eject": "react-scripts eject",
-        "apollo:generate": "apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/_generated",
+        "apollo:generate": "rimraf src/_generated && apollo codegen:generate --excludes=node_modules/* --endpoint http://localhost:4000 --target typescript --tagName gql  --addTypename --outputFlat src/_generated",
         "svgo": "npx svgo -f src/assets/"
     },
     "eslintConfig": {
