--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,10 @@
     "name": "yeny-server",
     "version": "0.1.0",
     "scripts": {
-        "start-dev": "ts-node-dev --respawn -T src/index.ts"
+        "start-dev": "ts-node-dev --respawn -T src/index.ts",
+        "start": "ts-nodesrc/index.ts"
     },
     "dependencies": {
-        "@types/node-fetch": "^2.5.4",
-        "@types/speakingurl": "^13.0.2",
         "apollo-server": "^2.9.16",
         "bcryptjs": "^2.4.3",
         "class-validator": "^0.11.0",
@@ -28,6 +27,8 @@
     },
     "devDependencies": {
         "@types/faker": "^4.1.9",
+        "@types/node-fetch": "^2.5.4",
+        "@types/speakingurl": "^13.0.2",
         "@types/uuid": "^3.4.6",
         "ts-node-dev": "1.0.0-pre.44"
     }
