--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "formik": "^2.1.1",
         "graphql": "^14.5.8",
         "leaflet": "^1.6.0",
+        "leaflet.markercluster": "^1.4.1",
         "lodash-es": "^4.17.15",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
@@ -25,7 +26,8 @@
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.3.0",
         "typescript": "^3.7.4",
-        "yup": "^0.28.0"
+        "yup": "^0.28.0",
+        "react-leaflet-markercluster": "^2.0.0-rc3"
     },
     "scripts": {
         "start-dev": "react-scripts start",
@@ -60,6 +62,7 @@
         "@types/react-dom": "^16.9.4",
         "@types/react-leaflet": "^2.5.0",
         "@types/react-router-dom": "^5.1.3",
+        "@types/react-leaflet-markercluster": "^2.0.0",
         "apollo": "^2.21.2",
         "faker": "^4.1.0",
         "svgo": "^1.3.2"
