--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,19 +1,16 @@
 {
     "compilerOptions": {
         "target": "es2016",
+        "module": "commonjs",
         "moduleResolution": "node",
         "esModuleInterop": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "declaration": true,
-        "declarationMap": true,
         "strict": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "noUnusedParameters": false,
-        "noUnusedLocals": false,
         "forceConsistentCasingInFileNames": true,
         "strictPropertyInitialization": false,
         "resolveJsonModule": true,
