--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .idea
 .idea/dataSources.xml
-
-# dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -25,5 +15,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /server/node_modules/
+/server/build/
+/server/.env
+/server/.env.local
+
 /client/node_modules/
-/server/build
+/client/build/
