--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
         "apollo-cache-inmemory": "^1.6.5",
         "faker": "^4.1.0",
         "@apollo/react-hooks": "^3.1.3",
-        "@date-io/date-fns": "^2.0.1",
+        "@date-io/date-fns": "1.3.13",
         "@material-ui/core": "^4.9.0",
         "@material-ui/icons": "^4.5.1",
         "@material-ui/lab": "^4.0.0-alpha.40",
@@ -16,7 +16,7 @@
         "@testing-library/user-event": "^8.0.5",
         "apollo-client": "^2.6.8",
         "axios": "^0.19.2",
-        "date-fns": "^2.9.0",
+        "date-fns": "2.9.0",
         "formik": "^2.1.3",
         "graphql": "^14.6.0",
         "leaflet": "^1.6.0",
